Refine test
Co-authored-by: Christoph <siedlerkiller@gmail.com>